<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safety_aware_reasoning_ros2_deploy</name>
  <version>0.0.0</version>
  <description>Package for deploying safety-aware reasoning (SAR) work on NASA JSC's Dexterous Robotics Team's ROS2-enabled robots.</description>
  <maintainer email="esheetz@umich.edu">esheetz</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>.
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>color_names</exec_depend>
  <exec_depend>color_blob_centroid</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>dex_ivr_interfaces</exec_depend>
  <exec_depend>sar_ros2_interfaces</exec_depend>

  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
